--- a/data/nginx/backup/app.conf
+++ b/data/nginx/backup/app.conf
@@ -17,22 +17,15 @@ server {
     #server_name example.org;
     server_tokens off;
 
-    ssl_certificate /etc/letsencrypt/live/izumi.myrating.cn/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/izumi.myrating.cn/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/example.org/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/example.org/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
-    location ~ ^/proxy/(.*)$ {
-        proxy_pass http://172.24.60.58:8085/proxy/$1;
-        proxy_set_header Host $http_host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
-    location /{
-        proxy_pass http://172.24.60.58:8085;
+    location / {
+        proxy_pass http://izumi.myrating.cn:8085;
         proxy_set_header Host $http_host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 }
-
